<resources>
    <string name="app_name">Fitness</string>
    <string name="map_api_key">AIzaSyA_xsZ8c-xqn4ZEXA1Kw22f2c_NDPO-078</string>
    <string name="title_activity_map1">Map1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height_in_cm">Height in cm: %.2f</string>
    <string name="height_in_feet">Height in feet: %.2f</string>

    <string name="sender_email">hirunapankaja9@gmail.com</string>
    <string name="sender_password">vifm lykm fvwq vjya</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="select_day">Select Day</string>
    <string name="bmi_text">BMI: %1$.2f</string>
    <string name="water_intake_text">Water Intake: %1$d ml</string>
    <string name="caloric_needs_text">Caloric Needs: %1$d kcal</string>
    <string name="protein_text">Protein: %d g</string>
    <string name="fat_text">Fat: %d g</string>
    <string name="carbs_text">Carbs: %d g</string>
    <string name="sleep_need_text">Sleep Need: %1$d hours</string>
    <string name="sleep_need">Sleep Need:</string>
    <string name="water_intake">Water Intake:</string>
    <string name="bmi_index">BMI index</string>
    <string name="bmi_icon">BMI icon</string>
    <string name="bmi">BMI:</string>
    <string name="caloric_needs">Caloric Needs:</string>
    <string name="nutrient_needs">Nutrient Needs</string>
    <string name="food_suggestion">Food Suggestion</string>
    <string name="suggest_food_for_week">( Suggest food for week )</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="view_your_bmi_calories_water_sleep_nutrients_and_food">View your BMI, calories, water, sleep, nutrients, and food.</string>
    <string name="this_settings_save">This settings save</string>
    <string name="settings">Settings</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="setting_icon">Setting Icon</string>
    <string-array name="height_units">
        <item>Cm</item>
        <item>Feet</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="back">Back</string>

    <string name="running_tracker">Running Tracker</string>
    <string name="start">Start</string>
    <string name="running_animation_button">running animation button</string>
    <string name="walking_tracker">Walking Tracker</string>

    <string name="vegan">Vegan</string>
    <string name="non_vegetarian">Non Vegetarian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="choose_your_preferred_diet_plan">CHOOSE YOUR PREFERRED DIET PLAN</string>

</resources>