<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_primary"
    android:padding="2dp">

    <!-- Metrics Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/view_your_bmi_calories_water_sleep_nutrients_and_food"            android:textColor="@color/gray"
            android:textSize="14sp" />

        <!-- BMI and Caloric Needs in same row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <!-- BMI -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_square"
                android:contentDescription="@string/bmi_index"
                android:gravity="center_vertical"
                android:importantForAccessibility="no"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/bmi_icon"
                    android:scaleType="centerInside"
                    android:src="@drawable/bmi_icon" />

                <TextView
                    android:id="@+id/bmiTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Caloric Needs -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/background_square"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginStart="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/calorie_icon" />

                <TextView
                    android:id="@+id/caloricNeedsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caloric_needs"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Nutrient Needs -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_square"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/nutrient_icon" />

                <TextView
                    android:id="@+id/nutrientNeedsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrient_needs"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/proteinTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginEnd="10dp" />


                <View
                    android:layout_width="2dp"
                    android:layout_height="30dp"
                    android:background="@color/gray"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:id="@+id/fatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />


                <View
                    android:layout_width="2dp"
                    android:layout_height="30dp"
                    android:background="@color/gray"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/carbsTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="6dp" />

            </LinearLayout>

        </LinearLayout>


        <!-- Water Intake and Sleep Need -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <!-- Water Intake -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/background_square"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginEnd="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/water_icon" />

                <TextView
                    android:id="@+id/waterIntakeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_intake"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Sleep Need -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/background_square"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginStart="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/sleep_icon" />

                <TextView
                    android:id="@+id/sleepNeedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sleep_need :"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_square"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/meal_plate" />

            <TextView
                android:id="@+id/FoodSuggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_suggestion"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/food_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/suggest_food_for_week"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/background_breakfast_overlay"
                android:id="@+id/breakfast">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>

                <View
                    android:layout_width="3dp"
                    android:layout_height="40dp"
                    android:background="@color/gray"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:id="@+id/breakfastFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/background_lunch_overlay"
                android:id="@+id/lunch"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:padding="8dp"/>

                <View
                    android:layout_width="3dp"
                    android:layout_height="40dp"
                    android:background="@color/gray"
                    android:layout_marginStart="30dp"/>
                <TextView
                    android:id="@+id/lunchFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/background_dinner_overlay"
                android:id="@+id/dinner"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:padding="8dp"/>

                <View
                    android:layout_width="3dp"
                    android:layout_height="40dp"
                    android:background="@color/gray"
                    android:layout_marginStart="28dp"/>

                <TextView
                    android:id="@+id/dinnerFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
